tests/should-pass/floats/ops.fk
-- #desc Perform some standard float operations.
-- #return true

main : {Bool}
main! = ((2.0 +. 1.0) /. 3.0) <. ((-. 1.0) *. (3.0 -. 6.0))
